--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@phosphor-icons/react": "^2.0.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^9.1.3",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
